# MICP_for_MT-TSP

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: examples.py
mt_tsp/: __main__.py  model.py  visualization.py
mt_tsp/utils/: loader.py
src/: __main__.py  infeasible.ilp  model.lp
src/mt_tsp/: __main__.py  model.py  visualization.py
tests/: test_models.py  test_visuals.py  utils.py
tests/run/: test_models.py  utils.py
tests/run/complex/: agent.toml  targets.json
tests/run/simple/: agent.toml  targets.json
tests/simple/: agent.toml  model.lp  targets.json
