[project]
name = "mt_tsp_sim"
version = "0.1.0"
description = "Moving-Target TSP via MICP and Gurobi"
authors = [{name="Nuvole Nere", email="jon-lee@sjtu.edu.cn"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gurobipy>=10.0.0",
    "numpy>=2.0.2",
    "matplotlib>=3.9.4",
    "jsonschema>=4.0.0",
    "tomli>=2.2.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
mt-tsp= "mt_tsp.__main__:app"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = ["black>=24.10.0", "mypy>=1.12.0", "types-PyYAML>=6.0.12.20240917"]
test = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]
dev = ["pre-commit>=4.0.1"]

[tool.pdm.scripts]
lint = "mypy mt_tsp tests"
test = "pytest"
coverage = "pytest --cov=mt_tsp --cov-report=xml --cov-report=html"
all = { composite = ["lint", "test"] }
app.call = "mt_tsp.__main__:app"

[tool.pdm.build]
includes = ["mt_tsp"]
excludes = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict=true

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disable_error_code = "import-untyped"

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
